@@ -12,6 +12,7 @@
 +STM32: Устранение различных ошибок, Tnx SP7MFR
 +STM32: W-Lite: Добавленя матричная обработка клавиш тангенты. Исп. RA3RBE
 +STM32: В режиме Double всегда отображается второй VFO на водопаде (без необходимости активации Show Sec VFO), Tnx SP7MFR
++STM32: На спектре отображаются границы Manual Notch фильтра, Tnx EA7HOG
 
 ----Version 9.3.1----
 +HARDW: W-Lite: Исправление типов диодов в схеме MotherBoard. Автор R7KBI
